--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
         "start": "gulp"
     },
     "dependencies": {
+        "babel-preset-es2015": "^6.18.0",
         "browser-sync": "^2.18.2",
         "gulp": "^3.9.1",
+        "gulp-babel": "^6.1.2",
         "gulp-less": "^3.3.0"
     }
 }
