--- a/package.json
+++ b/package.json
@@ -16,9 +16,20 @@
     },
     "dependencies": {
         "babel-preset-es2015": "^6.18.0",
+        "babel-preset-stage-0": "^6.16.0",
         "browser-sync": "^2.18.2",
         "gulp": "^3.9.1",
         "gulp-babel": "^6.1.2",
-        "gulp-less": "^3.3.0"
+        "gulp-environments": "^0.1.1",
+        "gulp-less": "^3.3.0",
+        "gulp-rollup": "^2.5.1",
+        "gulp-sourcemaps": "^1.9.1",
+        "prismjs": "^1.6.0",
+        "rollup-plugin-babel": "^2.6.1",
+        "rollup-plugin-commonjs": "^5.0.5",
+        "rollup-plugin-node-resolve": "^2.0.0",
+        "rollup-plugin-uglify": "^1.0.1",
+        "rollup-stream": "^1.14.0",
+        "vinyl-source-stream": "^1.1.0"
     }
 }
