--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "gulp": "^3.9.1",
         "gulp-environments": "^0.1.1",
         "gulp-less": "^3.3.0",
+        "gulp-rename": "^1.2.2",
         "gulp-sourcemaps": "^1.9.1",
         "rollup-plugin-babel": "^2.6.1",
         "rollup-plugin-uglify": "^1.0.1",
